workflows: avoid running jobs when editing title etc.
We intend to use the edited event to react to base branch changes - but
before this change, we also ran those jobs on simple edits like title or
description.

While this works for some of the quicker jobs, it will not be
sustainable for all evaluation-related jobs. But evaluation needs to be
re-triggered on a base branch change as well, thus this change.

--- a/.github/workflows/check-nix-format.yml
+++ b/.github/workflows/check-nix-format.yml
@@ -8,7 +8,7 @@ name: Check that Nix files are formatted
 
 on:
   pull_request_target:
-    types: [opened, synchronize, reopened, edited]
+  workflow_call:
 
 permissions: {}
 
