--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -7,7 +7,7 @@ name: "Label PR"
 
 on:
   pull_request_target:
-    types: [edited, opened, synchronize, reopened]
+  workflow_call:
 
 permissions:
   contents: read
