--- a/.github/workflows/no-channel.yml
+++ b/.github/workflows/no-channel.yml
@@ -2,17 +2,16 @@ name: "No channel PR"
 
 on:
   pull_request_target:
-    # Re-run should be triggered when the base branch is updated, instead of silently failing
-    types: [opened, synchronize, reopened, edited]
     branches:
       - 'nixos-**'
       - 'nixpkgs-**'
+  workflow_call:
 
 permissions: {}
 
 jobs:
   fail:
-    name: "This PR is is targeting a channel branch"
+    name: "This PR is targeting a channel branch"
     runs-on: ubuntu-24.04
     steps:
       - run: |
