workflows/eval: run when base branch changed
When the base branch changes, we need to run full eval again, because
the changed output paths depend on the base branch.

--- a/.github/workflows/edited.yml
+++ b/.github/workflows/edited.yml
@@ -19,7 +19,8 @@ jobs:
     name: Base
     if: github.event.changes.base.ref.from && github.event.changes.base.ref.from != github.event.pull_request.base.ref
     uses: ./.github/workflows/edited-base.yml
-    # Currently needed downstream for labels.yml
+    # Currently needed downstream for eval.yml and labels.yml
     permissions:
       contents: read
       pull-requests: write
+      statuses: write
