--- a/.github/workflows/edited-base.yml
+++ b/.github/workflows/edited-base.yml
@@ -22,6 +22,13 @@ jobs:
     name: Codeowners v2
     uses: ./.github/workflows/codeowners-v2.yml
 
+  eval:
+    name: Eval
+    uses: ./.github/workflows/eval.yml
+    permissions:
+      pull-requests: write
+      statuses: write
+
   labels:
     name: Label PR
     uses: ./.github/workflows/labels.yml
